# witter

./: .env.example  .gitignore
backend/: Cargo.toml
backend/src/: clock.rs  env.rs  main.rs  middlewares.rs
backend/src/endpoints/: me.rs  tweets.rs  users.rs
backend/src/tests/: test_helpers.rs  timeline.rs
backend/src/tests/test_helpers/: test_db.rs
frontend/: Cargo.toml
frontend/src/: api.rs  lib.rs  storage.rs
frontend/src/view/: mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
