[package]
name = "backend"
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
tide = "0.16.0"
sqlx = { version = "0.5.1", features = ["runtime-async-std-native-tls", "macros", "chrono", "json", "postgres", "uuid"] }
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
chrono = "0.4.19"
log = "0.4.14"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
thiserror = "1.0.24"
futures = { version = "0.3.13", features = ["compat"] }
rand = "0.8.3"
argonautica = "0.2.0"
failure = "0.1.8"
regex = "1.4.3"
lazy_static = "1.4.0"
shared = { path = "../shared", version = "0.1.0" }
async-trait = "0.1.48"

[dev-dependencies]
assert-json-diff = "2.0.1"
