[package]
name = "backend"
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
tide = "0.16.0"
sqlx = { version = "0.6.2", features = ["runtime-async-std-rustls", "macros", "chrono", "json", "postgres", "uuid"] }
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
chrono = "0.4.23"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
thiserror = "1.0.38"
futures = { version = "0.3.26", features = ["compat"] }
rand = "0.8.5"
argonautica = { git = "https://github.com/ssrlive/argonautica.git", branch = "master" }
failure = "0.1.8"
regex = "1.7.1"
lazy_static = "1.4.0"
shared = { path = "../shared", version = "0.1.0" }
async-trait = "0.1.64"

[dev-dependencies]
assert-json-diff = "2.0.2"
