[package]
name = "shared"
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.124", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
http-types = "2.10.0"
chrono = { version = "0.4.19", features = ["serde"] }
